Add coint sound for first day demo

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,5 +1,8 @@
 # Recursos para el curso de Construct 3
 
+## [3-10-2018] Día 1, ¡Hola mundo!
+  - [Sonido moneda](https://juanizquierdodomenech.github.io/agora.construct.media/resources/random_stuff/coin.wav)
+
 ## Recursos externos
 
 - Webs de **imágenes**
@@ -12,6 +15,7 @@
 
 - Webs para **música**
     1. [Canal de Youtube _HolFix_](https://www.youtube.com/channel/UC2_gl7WoSGsg7rLvBPTqtEw)
+    2. [Web Freesound](https://freesound.org/)
 
 - **Herramientas** online
     1. [Sprite Sheet Decomposer](https://jmsliu.com/products/sprite-sheet-decomposer/)
