--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,7 +1,7 @@
 # Recursos para el curso de Construct 3
 
-## [3-10-2018] Día 1, ¡Hola mundo!
-  - [Sonido moneda](https://juanizquierdodomenech.github.io/agora.construct.media/resources/random_stuff/coin.wav)
+## [Gothicvania]
+  - [Proyecto Day 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018-2019/Gothicvania/Day1/Gothicvania.c3p)
 
 ## Recursos externos
 
