Add gothicvania final project

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,6 +1,7 @@
 # Recursos para el curso de Construct 3
 
 ## [Gothicvania]
+  - [Proyecto Final](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/Gothicvania/Final/Gothicvania.c3p)
   - [Proyecto Day 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/Gothicvania/Day1/Gothicvania.c3p)
 
 ## Recursos externos
