--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,8 +1,13 @@
 # Recursos para el curso de Construct 3
 
+## Tomatina Slime
+  - [Assets](https://finalbossblues.itch.io/pixel-shooter-towers-asset-pack)
+
 ## Gothicvania
   - [Proyecto Final](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/Gothicvania/Final/Gothicvania.c3p)
   - [Proyecto Day 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/Gothicvania/Day1/Gothicvania.c3p)
+
+  - [Assets](https://ansimuz.itch.io/gothicvania-town)
 
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/img/2018_2019/Gothicvania/gothicvania.gif){: height="350px"}
 
