--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,6 +1,8 @@
 # Recursos para el curso de Construct 3
 
 ## Tomatina Slime
+  - [Proyecto Day 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/TomatinaSlime/Day1/TomatinaSlime.c3p)
+  
   - [Assets](https://finalbossblues.itch.io/pixel-shooter-towers-asset-pack)
 
 ## Gothicvania
