Add pixel heart link

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -5,6 +5,7 @@
   - [Proyecto Day 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/TomatinaSlime/Day1/TomatinaSlime.c3p)
   
   - [Assets](https://finalbossblues.itch.io/pixel-shooter-towers-asset-pack)
+  - [Pixel heart](https://opengameart.org/content/heart-pixel-art)
 
 ## Gothicvania
   - [Proyecto Final](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/Gothicvania/Final/Gothicvania.c3p)
