--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -4,8 +4,9 @@
   - [Proyecto Day 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/TomatinaSlime/Day2/TomatinaSlime.c3p)
   - [Proyecto Day 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/TomatinaSlime/Day1/TomatinaSlime.c3p)
   
-  - [Assets](https://finalbossblues.itch.io/pixel-shooter-towers-asset-pack)
+  - [Graphic assets](https://finalbossblues.itch.io/pixel-shooter-towers-asset-pack)
   - [Pixel heart](https://opengameart.org/content/heart-pixel-art)
+  - [SFX](https://opengameart.org/content/512-sound-effects-8-bit-style)
 
 ## Gothicvania
   - [Proyecto Final](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/Gothicvania/Final/Gothicvania.c3p)
