Add tomatina slime gif

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -9,6 +9,8 @@
   - [Pixel heart](https://opengameart.org/content/heart-pixel-art)
   - [SFX](https://opengameart.org/content/512-sound-effects-8-bit-style)
 
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/img/tomatina_slime/TomatinaSlime.gif){: height="350px"}
+
 ## Gothicvania
   - [Proyecto Final](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/Gothicvania/Final/Gothicvania.c3p)
   - [Proyecto Day 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/Gothicvania/Day1/Gothicvania.c3p)
