Add Space shooter assets link

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,5 +1,9 @@
 # Recursos para el curso de Construct 3
 
+## Shooter Wars from the Space
+
+  - [Graphic assets](https://ansimuz.itch.io/spaceship-shooter-environment)
+
 ## Tomatina Slime
   - [Proyecto Final](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/TomatinaSlime/DayFinal/TomatinaSlime.c3p)
   - [Proyecto Día 3](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/TomatinaSlime/Day3/TomatinaSlime.c3p)
