Add day 1 project space shooter

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,6 +1,7 @@
 # Recursos para el curso de Construct 3
 
 ## Shooter Wars from the Space
+  - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SpaceShooter/Day1/SpaceWarsSuperPlus.c3p)
 
   - [Graphic assets](https://ansimuz.itch.io/spaceship-shooter-environment)
 
