Add chiptone link

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -38,6 +38,7 @@
 - Webs para **música**
     1. [Canal de Youtube _HolFix_](https://www.youtube.com/channel/UC2_gl7WoSGsg7rLvBPTqtEw)
     2. [Web Freesound](https://freesound.org/)
+    3. [Chiptone, generación de SFX procedural](http://sfbgames.com/chiptone)
 
 - **Herramientas** online
     1. [Sprite Sheet Decomposer](https://jmsliu.com/products/sprite-sheet-decomposer/)
