--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -2,6 +2,7 @@
 
 ## Shooter Wars from the Space
   - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SpaceShooter/Day1/SpaceWarsSuperPlus.c3p)
+  - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SpaceShooter/Day2/SpaceWarsSuperPlus.c3p)
 
   - [Graphic assets](https://ansimuz.itch.io/spaceship-shooter-environment)
 
