Add superdiving day 1 project

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,6 +1,8 @@
 # Recursos para el curso de Construct 3
 
 ## Dora, Dora, Dora la buceadora
+  - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SuperDiving/Day1/SuperDiving.c3p)
+
   - [Graphic assets](https://ansimuz.itch.io/underwater-diving)
 
 ## Shooter Wars from the Space
