Add super diving day 2 project

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -2,6 +2,7 @@
 
 ## Dora, Dora, Dora la buceadora
   - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SuperDiving/Day1/SuperDiving.c3p)
+  - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SuperDiving/Day2/SuperDiving.c3p)
 
   - [Graphic assets](https://ansimuz.itch.io/underwater-diving)
 
