Add final super siving project, and gif

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -4,8 +4,11 @@
   - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SuperDiving/Day1/SuperDiving.c3p)
   - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SuperDiving/Day2/SuperDiving.c3p)
   - [Proyecto Día 3](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SuperDiving/Day3/SuperDiving.c3p)
+  - [Proyecto Final](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SuperDiving/Final/SuperDiving.c3p)
 
   - [Graphic assets](https://ansimuz.itch.io/underwater-diving)
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/img/2018_2019/SuperDiving/super_diving.gif){: height="350px"}
 
 ## Shooter Wars from the Space
   - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SpaceShooter/Day1/SpaceWarsSuperPlus.c3p)
