--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -60,6 +60,7 @@
     1. [Sprite Sheet Decomposer](https://jmsliu.com/products/sprite-sheet-decomposer/)
     2. [Descomponer Gifs](https://es.bloggif.com/gif-extract)
     3. [Grabación de vídeos Online](https://www.apowersoft.com/free-online-screen-recorder)
+    4. [Edición de vídeo Online - Clipchamp](https://clipchamp.com/es/products/create)
 
 ## Contacto
 
