Add link to export games (scirra arcade and html)

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,6 +1,10 @@
 # Recursos para el curso de Construct 3
 
-## Dora, Dora, Dora la buceadora
+---
+
+## Juegos del curso
+
+### Dora, Dora, Dora la buceadora
   - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SuperDiving/Day1/SuperDiving.c3p)
   - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SuperDiving/Day2/SuperDiving.c3p)
   - [Proyecto Día 3](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SuperDiving/Day3/SuperDiving.c3p)
@@ -10,7 +14,7 @@
 
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/img/2018_2019/SuperDiving/super_diving.gif){: height="350px"}
 
-## Shooter Wars from the Space
+### Shooter Wars from the Space
   - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SpaceShooter/Day1/SpaceWarsSuperPlus.c3p)
   - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SpaceShooter/Day2/SpaceWarsSuperPlus.c3p)
   - [Proyecto Día 3](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/SpaceShooter/Day3/SpaceWarsSuperPlus.c3p)
@@ -21,7 +25,7 @@
 
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/img/2018_2019/SpaceShooter/space_shooter.gif){: height="350px"}
 
-## Tomatina Slime
+### Tomatina Slime
   - [Proyecto Final](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/TomatinaSlime/DayFinal/TomatinaSlime.c3p)
   - [Proyecto Día 3](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/TomatinaSlime/Day3/TomatinaSlime.c3p)
   - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/TomatinaSlime/Day2/TomatinaSlime.c3p)
@@ -33,13 +37,29 @@
 
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/img/2018_2019/TomatinaSlime/TomatinaSlime.gif){: height="350px"}
 
-## Gothicvania
+### Gothicvania
   - [Proyecto Final](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/Gothicvania/Final/Gothicvania.c3p)
   - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2018_2019/Gothicvania/Day1/Gothicvania.c3p)
 
   - [Assets](https://ansimuz.itch.io/gothicvania-town)
 
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/img/2018_2019/Gothicvania/gothicvania.gif){: height="350px"}
+
+---
+
+## Subir a la Scirra Arcade
+
+* [Scirra arcade](https://www.scirra.com/arcade/top-addicting-games)
+
+* [Guía para subir nuestro juego](https://juanizquierdodomenech.github.io/agora.construct.media/resources/subir_scirra_arcade/SubirScirra.pdf)
+
+---
+
+## Exportar juego a HTML5
+
+* [Guía para exportar nuestro juego a HTML5](https://juanizquierdodomenech.github.io/agora.construct.media/resources/subir_scirra_arcade/ExportarHTML.pdf)
+
+---
 
 ## Recursos externos
 
@@ -61,6 +81,8 @@
     2. [Descomponer Gifs](https://es.bloggif.com/gif-extract)
     3. [Grabación de vídeos Online](https://www.apowersoft.com/free-online-screen-recorder)
     4. [Edición de vídeo Online - Clipchamp](https://clipchamp.com/es/products/create)
+
+---
 
 ## Contacto
 
