--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,5 +1,12 @@
 # Recursos para el curso de Construct 3
 
+## Concurso de videojuegos EPSA 2019
+
+### Pedro Fernández **One shot one death**
+
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/pedro_fernandez/game/)
+  - [Vídeo promocional](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/pedro_fernandez/video/promo.mp4)
+
 ---
 
 ## Juegos del curso
