--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -2,7 +2,7 @@
 
 ## Concurso de videojuegos EPSA 2019
 
-### Pedro Fernández **One shot one death**
+### **One shot one death** by _Pedro Fernández_
 
   - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/pedro_fernandez/game/)
   - [Vídeo promocional](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/pedro_fernandez/video/promo.mp4)
