Add Aleix and Christopher games

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -2,6 +2,16 @@
 
 ## Concurso de videojuegos EPSA 2019
 
+### **Fantasy Heroes** by _Aleix Escañuela_
+
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/aleix_escanyuela/game/)
+  - [Vídeo promocional](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/aleix_escanyuela/video/promo.mp4)
+
+### **Turret Defensor** by _Christopher Symonds_
+
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/christopher_symonds/game/)
+  - [Vídeo promocional](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/christopher_symonds/video/promo.mp4)
+
 ### **One shot one death** by _Pedro Fernández_
 
   - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/pedro_fernandez/game/)
