Fix Cesar game url

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -9,7 +9,7 @@
 
 ### **Exak** by _César Carrión_
 
-  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/cesar_carrion/game/)
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/cesar_carrion/game/index.html)
   - [Vídeo promocional](https://juanizquierdodomenech.github.io/agora.construct.media/resources/games_contest_2019/cesar_carrion/video/promo.m4v)
 
 ### **Turret Defensor** by _Christopher Symonds_
