Add pico 8 class examples

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,5 +1,19 @@
 # Recursos para el curso de Construct 3
 
+## Pico 8
+
+### Ejercicios de clase
+
+**Hello world**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/hello_world.p8.png){: height="350px"}
+
+**Arrays**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/arrays.p8.png){: height="350px"}
+
+---
+
 ## Concurso de videojuegos EPSA 2019
 
 ### **Fantasy Heroes** by _Aleix Escañuela_
