Add some random stuff of Pico 8

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,6 +1,8 @@
-# Recursos para el curso de Construct 3
+# Recursos para el curso de Videojuegos Avanzado de Àgoralab
 
-## Pico 8
+---
+
+# Pico 8
 
 ### Ejercicios de clase
 
@@ -12,7 +14,36 @@
 
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/arrays.p8.png){: height="350px"}
 
+### Pico 8 Random stuff
+
+**Dripping**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/dripping/dripping.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/dripping/dripping.html)
+
+**AABB Collision detection**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/collision_detect/collision_detect_bb.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/collision_detect/collision_detect_bb.html)
+
+**Dist2D Mouse**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/dist2d/dist2d.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/dist2d/dist2d.html)
+
+**Sea**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/sea/sea.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/sea/sea.html)
+
+**Weave**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/weave/weave.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/weave/weave.html)
+
 ---
+
+# Construct 3
 
 ## Concurso de videojuegos EPSA 2019
 
