Fix wrong pico 8 cart name

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -38,8 +38,8 @@
 
 **Weave**
 
-![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/weave/weave.p8.png){: height="350px"}
-  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/weave/weave.html)
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/weave/sin.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/weave/sin.html)
 
 ---
 
