Add pixelmove example

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -14,6 +14,11 @@
 
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/arrays.p8.png){: height="350px"}
 
+**Pixel Move**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/pixelmove/pixelmove.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/pixelmove/pixelmove.html)
+
 ### Pico 8 Random stuff
 
 **Dripping**
