Add Circle move example

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -19,6 +19,11 @@
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/pixelmove/pixelmove.p8.png){: height="350px"}
   - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/pixelmove/pixelmove.html)
 
+**Circle Move**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/circlemove/circlemove.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/circlemove/circlemove.html)
+
 ### Pico 8 Random stuff
 
 **Dripping**
