Add party hard example

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -24,6 +24,11 @@
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/circlemove/circlemove.p8.png){: height="350px"}
   - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/circlemove/circlemove.html)
 
+**Party Hard**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/partyhard/party.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/partyhard/party.html)
+
 ### Pico 8 Random stuff
 
 **Dripping**
