Add breakout pico 8 part 1

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -1,8 +1,15 @@
-# Recursos para el curso de Videojuegos Avanzado de Àgoralab
+# Recursos para el curso de Videojuegos Avanzado de Àgoralab 2018-2019
 
 ---
 
 # Pico 8
+
+### Breakoutlab
+
+**P1 - Moviendo la pala**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/breakout/p1_paddle_move/breakout.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/breakout/p1_paddle_move/breakout.html)
 
 ### Ejercicios de clase
 
