Add second class example for breakout

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -11,6 +11,11 @@
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p1_paddle_move/breakout.p8.png){: height="350px"}
   - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p1_paddle_move/breakout.html)
 
+**P2 - Rebotando la pelota**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p2_ball_bounce/breakout.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p2_ball_bounce/breakout.html)
+
 ### Ejercicios de clase
 
 **Hello world**
