--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -16,6 +16,9 @@
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p2_ball_bounce/breakout.p8.png){: height="350px"}
   - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p2_ball_bounce/breakout.html)
 
+**Ejercicio - AABB Collision**
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/aabb_exercise/aabb_pre.p8.png){: height="350px"}
+
 ### Ejercicios de clase
 
 **Hello world**
