Add p3 paddle game and aabb exercise completed file

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -11,14 +11,26 @@
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p1_paddle_move/breakout.p8.png){: height="350px"}
   - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p1_paddle_move/breakout.html)
 
-**P2 - Rebotando la pelota**
+**P2 - Rebotando la pelota contra las paredes**
 
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p2_ball_bounce/breakout.p8.png){: height="350px"}
   - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p2_ball_bounce/breakout.html)
 
 **Ejercicio - AABB Collision**
 
+#### Por resolver
+
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/aabb_exercise/aabb_pre.p8.png){: height="350px"}
+
+#### Resuelto
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/aabb_exercise/aabb_completed.p8.png){: height="350px"}
+
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/aabb_exercise/aabb_completed.html)
+
+**P3 - Rebotando la pelota contra la pala**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p3_ball_paddle_collision/breakout.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p3_ball_paddle_collision/breakout.html)
 
 ### Ejercicios de clase
 
