Add breakout part 4 (ui and score)

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -32,6 +32,11 @@
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p3_ball_paddle_collision/breakout.p8.png){: height="350px"}
   - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p3_ball_paddle_collision/breakout.html)
 
+**P4 - Interfaz y puntuación**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p4_ui/breakout.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p4_ui/breakout.html)
+
 ### Ejercicios de clase
 
 **Hello world**
