Add breakout final example

--- a/year2018_2019.md
+++ b/year2018_2019.md
@@ -6,6 +6,11 @@
 
 ### Breakoutlab
 
+**Final**
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/final/paddle_2019.p8.png){: height="350px"}
+  - [**Jugar**](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/final/paddle_2019.html)
+
 **P1 - Moviendo la pala**
 
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/pico8/class_examples/2018_2019/breakout/p1_paddle_move/breakout.p8.png){: height="350px"}
