Add gothicvania class 1 project

--- a/year2019_2020.md
+++ b/year2019_2020.md
@@ -6,6 +6,11 @@
 
 ## Juegos del curso
 
+### Gothicvania
+  - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/Gothicvania/Day1/Gothicvania.c3p)
+
+  - [Assets](https://ansimuz.itch.io/gothicvania-patreon-collection)
+
 ---
 
 ## Subir a la Scirra Arcade
