Add mp3 for gothicvania

--- a/year2019_2020.md
+++ b/year2019_2020.md
@@ -9,7 +9,9 @@
 ### Gothicvania
   - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/Gothicvania/Day1/Gothicvania_Clase.c3p)
 
-  - [Assets](https://ansimuz.itch.io/gothicvania-patreon-collection)
+  - [Sprites](https://ansimuz.itch.io/gothicvania-patreon-collection)
+
+  - [Música](https://juanizquierdodomenech.github.io/agora.construct.media/resources/random_stuff/castlevania-ii-simons-quest-bloody-tears.mp3)
 
 ---
 
