Add second day Gothicvania

--- a/year2019_2020.md
+++ b/year2019_2020.md
@@ -8,6 +8,7 @@
 
 ### Gothicvania
   - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/Gothicvania/Day1/Gothicvania_Clase.c3p)
+  - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/Gothicvania/Day2/Gothicvania_Clase.c3p)
 
   - [Sprites](https://ansimuz.itch.io/gothicvania-patreon-collection)
 
