Add gothicvania gif image

--- a/year2019_2020.md
+++ b/year2019_2020.md
@@ -14,6 +14,8 @@
 
   - [Música](https://juanizquierdodomenech.github.io/agora.construct.media/resources/random_stuff/castlevania-ii-simons-quest-bloody-tears.mp3)
 
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/img/2019_2020/Gothicvania/gothicvania.gif){: height="350px"}
+
 ---
 
 ## Subir a la Scirra Arcade
