Add tomatina day 1 project

--- a/year2019_2020.md
+++ b/year2019_2020.md
@@ -16,6 +16,9 @@
 
 ![Image](https://juanizquierdodomenech.github.io/agora.construct.media/img/2019_2020/Gothicvania/gothicvania.gif){: height="350px"}
 
+### Tomatina Slime
+ - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day1/TomatinaSlime_Clase.c3p)
+
 ---
 
 ## Subir a la Scirra Arcade
