Add day 3 tomatina

--- a/year2019_2020.md
+++ b/year2019_2020.md
@@ -19,6 +19,7 @@
 ### Tomatina Slime
  - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day1/TomatinaSlime_Clase.c3p)
  - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day2/TomatinaSlime_Clase.c3p)
+ - [Proyecto Día 3](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day3/TomatinaSlime_Clase.c3p)
 
 ---
 
