--- a/year2019_2020.md
+++ b/year2019_2020.md
@@ -21,6 +21,9 @@
  - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day2/TomatinaSlime_Clase.c3p)
  - [Proyecto Día 3](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day3/TomatinaSlime_Clase.c3p)
 
+### Space Shooter Boy
+ - [Assets](https://juanizquierdodomenech.github.io/agora.construct.media/resources/assets/Retro_Pixel_Space_Shooter_SHMUP_Pack.zip)
+
 ---
 
 ## Subir a la Scirra Arcade
