--- a/year2019_2020.md
+++ b/year2019_2020.md
@@ -21,6 +21,10 @@
  - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day2/TomatinaSlime_Clase.c3p)
  - [Proyecto Día 3](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day3/TomatinaSlime_Clase.c3p)
 
+ - [Sprites](https://finalbossblues.itch.io/pixel-shooter-towers-asset-pack)
+ - [Corazoncito](https://opengameart.org/content/heart-pixel-art)
+ - [SFX](https://opengameart.org/content/512-sound-effects-8-bit-style)
+
 ### Space Shooter Boy
  - [Assets](https://juanizquierdodomenech.github.io/agora.construct.media/resources/assets/GameBoyShooter/Shooter_Gameboy_Pack.zip)
  - [Música](https://juanizquierdodomenech.github.io/agora.construct.media/resources/assets/GameBoyShooter/Gradius_GameBoy_OST.zip)
