Add tomatina gif

--- a/year2019_2020.md
+++ b/year2019_2020.md
@@ -20,10 +20,14 @@
  - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day1/TomatinaSlime_Clase.c3p)
  - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day2/TomatinaSlime_Clase.c3p)
  - [Proyecto Día 3](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day3/TomatinaSlime_Clase.c3p)
+ - [Proyecto Día 4](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/TomatinaSlime/Day4/TomatinaSlime_Clase.c3p)
 
  - [Sprites](https://finalbossblues.itch.io/pixel-shooter-towers-asset-pack)
  - [Corazoncito](https://opengameart.org/content/heart-pixel-art)
  - [SFX](https://opengameart.org/content/512-sound-effects-8-bit-style)
+
+![Image](https://juanizquierdodomenech.github.io/agora.construct.media/img/2019_2020/TomatinaSlime/tomatina.gif){: height="350px"}
+
 
 ### Space Shooter Boy
  - [Assets](https://juanizquierdodomenech.github.io/agora.construct.media/resources/assets/GameBoyShooter/Shooter_Gameboy_Pack.zip)
