Add day 2 space shooter game

--- a/year2019_2020.md
+++ b/year2019_2020.md
@@ -32,6 +32,7 @@
 ### Space Shooter Boy
 
  - [Proyecto Día 1](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/ShootEmBoy/Day1/Space_Shooter_Boy.c3p)
+ - [Proyecto Día 2](https://juanizquierdodomenech.github.io/agora.construct.media/base_projects/2019_2020/ShootEmBoy/Day2/Space_Shooter_Boy.c3p)
 
  - [Assets](https://juanizquierdodomenech.github.io/agora.construct.media/resources/assets/GameBoyShooter/Shooter_Gameboy_Pack.zip)
  - [Música](https://juanizquierdodomenech.github.io/agora.construct.media/resources/assets/GameBoyShooter/Gradius_GameBoy_OST.zip)
